# open_asr_leaderboard_cl

./: README.md  results.csv  run_eval.py
modal_app/: README.md  analyze_results.py  pyproject.toml  run.py
modal_app/app/: __init__.py  common.py  stage_data.py  transcription.py
modal_app/utils/: __init__.py  data.py
modal_app/utils/normalizer/: __init__.py  data_utils.py
